# cortex

./: .gitignore  CMakeLists.txt  README.md  main.cpp
datasets/: loader.cpp  loader.hpp
exceptions/: exceptions.hpp
math/: exceptions.hpp  matrix.hpp  matrix_expr.hpp  transpose_view.hpp
nn/: activation.cpp  activation.hpp  dense_layer.cpp  dense_layer.hpp  network.cpp  network.hpp
serialization/: model_io.cpp  model_io.hpp
src/cortex/datasets/: loader.cpp  loader.hpp
src/cortex/exceptions/: exceptions.hpp
src/cortex/math/: matrix.hpp
src/cortex/nn/: activation.hpp  dense_layer.cpp  dense_layer.hpp  network.cpp  network.hpp
src/cortex/serialization/: model_io.cpp  model_io.hpp
src/cortex/training/: loss.hpp  trainer.cpp  trainer.hpp
training/: loss.hpp  trainer.cpp  trainer.hpp
